# minio-cpp-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  main.cpp  minio.cpp  minio.h
cmake/: FindMinio.cmake
examples/: CMakeLists.txt  bucket_exists.cc  copy_objcet.cc  get_object.cc  list_buckets.cc  list_objcets.cc  make_bucket.cc  put_object.cc  remove_bucket.cc  remove_objcet.cc
src/: CMakeLists.txt  minio-exception.h  minio.cpp  minio.h
